--- a/common.zh_CN.po
+++ b/common.zh_CN.po
@@ -1598,19 +1598,19 @@ msgstr "团队死亡竞技"
 
 #: qcsrc/common/items/item/ammo.qh:56
 msgid "Shells"
-msgstr ""
+msgstr "霰弹"
 
 #: qcsrc/common/items/item/ammo.qh:92
 msgid "Bullets"
-msgstr ""
+msgstr "子弹"
 
 #: qcsrc/common/items/item/ammo.qh:124
 msgid "Rockets"
-msgstr ""
+msgstr "火箭弹"
 
 #: qcsrc/common/items/item/ammo.qh:156
 msgid "Cells"
-msgstr ""
+msgstr "电池"
 
 #: qcsrc/common/items/item/ammo.qh:188
 #: qcsrc/common/turrets/turret/plasma_weapon.qh:7
@@ -1623,7 +1623,7 @@ msgstr "小护甲"
 
 #: qcsrc/common/items/item/armor.qh:84
 msgid "Medium armor"
-msgstr "中型护甲"
+msgstr "中护甲"
 
 #: qcsrc/common/items/item/armor.qh:126 qcsrc/common/items/item/armor.qh:133
 msgid "Big armor"
@@ -1639,7 +1639,7 @@ msgstr "小血包"
 
 #: qcsrc/common/items/item/health.qh:84
 msgid "Medium health"
-msgstr "中型血包"
+msgstr "中血包"
 
 #: qcsrc/common/items/item/health.qh:126 qcsrc/common/items/item/health.qh:129
 msgid "Big health"
@@ -1657,7 +1657,7 @@ msgstr "火箭背包"
 
 #: qcsrc/common/items/item/jetpack.qh:71
 msgid "Fuel"
-msgstr ""
+msgstr "燃料"
 
 #: qcsrc/common/items/item/jetpack.qh:96
 msgid "Fuel regenerator"
@@ -2322,7 +2322,7 @@ msgstr "带球人"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:51
 msgid "Leader"
-msgstr "领队者"
+msgstr "鳌头"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:54
 msgid "Goal"
@@ -2457,12 +2457,12 @@ msgstr "^BG旗帜已回到基地"
 #: qcsrc/common/notifications/all.inc:253
 #, c-format
 msgid "^BG%s^BG lost the ^TC^TT^BG flag"
-msgstr "^BG%s^BG丢掉了^TC^TT队^BG旗帜"
+msgstr "^BG%s^BG 丢失了^TC^TT队^BG旗帜"
 
 #: qcsrc/common/notifications/all.inc:254
 #, c-format
 msgid "^BG%s^BG lost the flag"
-msgstr "^BG%s^BG 丢掉了旗帜"
+msgstr "^BG%s^BG 丢失了旗帜"
 
 #: qcsrc/common/notifications/all.inc:255
 #, c-format
@@ -3855,12 +3855,12 @@ msgstr "^BG%s敌人（^BG%s%s）^BG拿到了自己的旗帜！夺回它！"
 #: qcsrc/common/notifications/all.inc:578
 #, c-format
 msgid "^BGThe %senemy^BG got the ^TC^TT^BG flag! Retrieve it!"
-msgstr ""
+msgstr "^BG%s敌人^BG拿到了^TC^TT队^BG旗帜！夺回它！"
 
 #: qcsrc/common/notifications/all.inc:579
 #, c-format
 msgid "^BGThe %senemy (^BG%s%s)^BG got the ^TC^TT^BG flag! Retrieve it!"
-msgstr ""
+msgstr "^BG%s敌人（^BG%s%s）^BG拿到了^TC^TT队^BG旗帜！夺回它！"
 
 #: qcsrc/common/notifications/all.inc:582
 #, c-format
@@ -4345,7 +4345,7 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:725
 msgid "^BGLeaders can now be seen by enemies on radar!"
-msgstr "^BG敌人现在可在雷达上看到领导者！"
+msgstr "^BG现在可在雷达上看到鳌头！"
 
 #: qcsrc/common/notifications/all.inc:727
 #, c-format
@@ -6504,11 +6504,11 @@ msgstr "物理参数面板"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_pickup.qc:18
 msgid "Pickup messages:"
-msgstr ""
+msgstr "拾取消息："
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_pickup.qc:29
 msgid "Show timer:"
-msgstr ""
+msgstr "显示计时："
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_pickup.qc:31
 #: qcsrc/menu/xonotic/dialog_hudpanel_weapons.qc:24
@@ -6527,15 +6527,15 @@ msgstr "总是"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_pickup.qc:33
 msgid "Spectating"
-msgstr ""
+msgstr "旁观时"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_pickup.qc:37
 msgid "Icon size scale:"
-msgstr ""
+msgstr "图标大小："
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_pickup.qh:6
 msgid "Pickup Panel"
-msgstr ""
+msgstr "拾取提示栏"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_powerups.qh:6
 msgid "Powerups Panel"
@@ -9701,7 +9701,7 @@ msgstr "全局渲染亮度"
 
 #: qcsrc/menu/xonotic/dialog_settings_video.qc:153
 msgid "Wait for GPU to finish each frame"
-msgstr "等待 GPU 来完成每一帧的渲染"
+msgstr "等待 GPU 完成每一帧的渲染"
 
 #: qcsrc/menu/xonotic/dialog_settings_video.qc:154
 msgid ""
