--- a/common.he.po
+++ b/common.he.po
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-08 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Tal Leibman <leibman2@gmail.com>, 2019\n"
+"Last-Translator: עומר א״ש <omeritzicschwartz@gmail.com>, 2020\n"
 "Language-Team: Hebrew (http://www.transifex.com/team-xonotic/xonotic/"
 "language/he/)\n"
 "Language: he\n"
